--- a/src/client/styles/layout/_main-section.scss
+++ b/src/client/styles/layout/_main-section.scss
@@ -1,8 +1,7 @@
-.left {
+.main-section {
   background-color: #141419;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
   padding: 1rem;
 
