--- a/src/client/styles/_base.scss
+++ b/src/client/styles/_base.scss
@@ -23,9 +23,11 @@ button {
   cursor: pointer;
   border: 0;
   outline: 0;
+  border-radius: 4px;
 }
 
 a {
+  color: #f8f8f9;
   text-decoration: none;
 }
 
