--- a/src/client/styles/layout/_main.scss
+++ b/src/client/styles/layout/_main.scss
@@ -2,8 +2,8 @@
   .container {
     display: grid;
     grid-template-columns: 100%;
-    grid-template-rows: auto;
     gap: 2rem 0;
+    height: 90%;
     justify-content: center;
 
     & > section {
