--- a/src/client/styles/style.scss
+++ b/src/client/styles/style.scss
@@ -5,10 +5,14 @@
 @import "layout/container";
 @import "layout/header";
 @import "layout/main";
-@import "layout/left";
-@import "layout/right";
+@import "layout/main-section";
 
+@import "components/menu";
 @import "components/form";
 @import "components/list";
 @import "components/button";
-@import "components/picture";
+@import "components/card";
+@import "components/result";
+@import "components/alert";
+@import "components/loading";
+@import "components/saved-trips";
